--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.27.0
-pandas==2.1.0
-prophet==1.1.4
-openpyxl==3.1.2
-python-dateutil==2.8.2
-requests==2.31.0
-urllib3==2.0.4 
+streamlit==1.39.0
+ pandas==2.2.3 
+ prophet==1.1.5 
+ plotly==5.24.1 
+ openpyxl==3.1.5 
+ requests==2.32.3
