--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.39.0
- pandas==2.2.3 
- prophet==1.1.5 
- plotly==5.24.1 
- openpyxl==3.1.5 
- requests==2.32.3
+pandas==2.2.3
+prophet==1.1.5
+plotly==5.24.1
+openpyxl==3.1.5
+requests==2.32.3
+numpy<1.27
